# madara

./: .gitignore  Cargo.toml
benchmarking/scripts/: functions.js  starknet-erc20.yml
cairo-contracts/src/accounts/cairo1/: account.cairo  account.sierra.json
cairo-contracts/src/cairo_1/accounts/: NoValidateAccount.cairo
configs/: index.json
configs/genesis-assets/: ArgentAccountCairoOne.python.casm.json  NoValidateAccount.python.casm.json  NoValidateAccount.sierra.json  OpenZeppelinAccountCairoOne.python.casm.json  genesis.json
crates/client/commitment-state-diff/: Cargo.toml
crates/client/commitment-state-diff/src/: lib.rs
crates/client/data-availability/src/: lib.rs  utils.rs
crates/client/mapping-sync/src/: sync_blocks.rs
crates/client/rpc-core/src/: utils.rs
crates/client/rpc/src/: lib.rs  types.rs
crates/client/settlement/src/: sync_state.rs
crates/node/: Cargo.toml
crates/node/src/: chain_spec.rs  constants.rs
crates/node/src/commands/: run.rs
crates/pallets/starknet/src/: blockifier_state_adapter.rs  genesis_loader.rs  lib.rs  message.rs  runtime_api.rs  state_root.rs  types.rs
crates/primitives/block/src/: lib.rs
crates/primitives/starknet/: Cargo.toml
crates/primitives/transactions/src/: lib.rs
crates/runtime/src/: lib.rs
mc_mapping_sync/: struct.MappingSyncWorker.html
os/: os_latest.json
src/mc_mapping_sync/: lib.rs.html
src/pallet_starknet/: message.rs.html
starknet-rpc-test/: Cargo.toml  add_declare_transaction.rs
starknet-rpc-test/src/: constants.rs
tests/tests/: constants.ts
tests/util/: starknet.ts
(+28 files in other folders)
