[package]
name = "mc-commitment-state-diff"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Substrate
sc-client-api = { workspace = true }
sp-api = { workspace = true, default-features = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true, default-features = true }

# Madara
mc-db = { workspace = true, default-features = true }
mp-digest-log = { workspace = true, default-features = true }
mp-hashers = { workspace = true, default-features = true }
mp-storage = { workspace = true, default-features = true }
mp-transactions = { workspace = true, features = ["serde"]}
pallet-starknet = { workspace = true, default-features = true }
pallet-starknet-runtime-api = { workspace = true, default-features = true }
parity-scale-codec = { workspace = true }
hex.workspace = true

# Starknet
blockifier = { workspace = true, default-features = true }
starknet_api = { workspace = true, default-features = true }

# Async
futures = { workspace = true, default-features = true }

# Others
indexmap = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
